// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    [
      {
        "dependencies": [
          {
            "artifactId": "jackson-databind-nullable",
            "groupId": "org.openapitools",
            "version": "'JACKSON-DATABIND-NULLABLE-VERSION'",
          },
        ],
      },
      {
        "condition": false,
        "mavenDefinition": {
          "pluginManagement": [
            {
              "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <skipValidateSpec>false</skipValidateSpec>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <title>jhipster</title>
                                <useSpringBoot3>true</useSpringBoot3>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
",
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
              "version": "\${openapi-generator-maven-plugin.version}",
            },
          ],
          "plugins": [
            {
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
            },
          ],
          "properties": [
            {
              "property": "openapi-generator-maven-plugin.version",
              "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
            },
          ],
        },
      },
    ],
  ],
  "mergePrettierConfig": [
    {
      "overrides": [
        {
          "files": "*.java",
          "options": {
            "tabWidth": 4,
          },
        },
      ],
      "plugins": [
        "prettier-plugin-java",
      ],
    },
  ],
}
`;

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should compose with generators 1`] = `
[
  "jhipster:java:build-tool",
]
`;

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should call source snapshot 1`] = `
{
  "addGradleBuildSrcDependencyCatalogLibraries": [
    [
      {
        "libraryName": "openapi-generator",
        "module": "org.openapitools:openapi-generator-gradle-plugin",
        "scope": "implementation",
        "version": "'GRADLE-OPENAPI-GENERATOR-VERSION'",
      },
    ],
  ],
  "addGradlePlugin": [
    {
      "id": "jhipster.openapi-generator-conventions",
    },
  ],
  "addJavaDefinitions": [
    [
      {
        "dependencies": [
          {
            "artifactId": "jackson-databind-nullable",
            "groupId": "org.openapitools",
            "version": "'JACKSON-DATABIND-NULLABLE-VERSION'",
          },
        ],
      },
      {
        "condition": true,
        "mavenDefinition": {
          "pluginManagement": [
            {
              "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <skipValidateSpec>false</skipValidateSpec>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <title>jhipster</title>
                                <useSpringBoot3>true</useSpringBoot3>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
",
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
              "version": "\${openapi-generator-maven-plugin.version}",
            },
          ],
          "plugins": [
            {
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
            },
          ],
          "properties": [
            {
              "property": "openapi-generator-maven-plugin.version",
              "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
            },
          ],
        },
      },
    ],
  ],
  "mergePrettierConfig": [
    {
      "overrides": [
        {
          "files": "*.java",
          "options": {
            "tabWidth": 4,
          },
        },
      ],
      "plugins": [
        "prettier-plugin-java",
      ],
    },
  ],
}
`;

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should compose with generators 1`] = `
[
  "jhipster:java:build-tool",
]
`;

exports[`generator - java:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "buildSrc/src/main/groovy/jhipster.openapi-generator-conventions.gradle": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(false) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    [
      {
        "dependencies": [
          {
            "artifactId": "jackson-databind-nullable",
            "groupId": "org.openapitools",
            "version": "'JACKSON-DATABIND-NULLABLE-VERSION'",
          },
        ],
      },
      {
        "condition": false,
        "mavenDefinition": {
          "pluginManagement": [
            {
              "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <skipValidateSpec>false</skipValidateSpec>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <title>jhipster</title>
                                <useSpringBoot3>true</useSpringBoot3>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
",
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
              "version": "\${openapi-generator-maven-plugin.version}",
            },
          ],
          "plugins": [
            {
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
            },
          ],
          "properties": [
            {
              "property": "openapi-generator-maven-plugin.version",
              "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
            },
          ],
        },
      },
    ],
  ],
  "mergePrettierConfig": [
    {
      "overrides": [
        {
          "files": "*.java",
          "options": {
            "tabWidth": 4,
          },
        },
      ],
      "plugins": [
        "prettier-plugin-java",
      ],
    },
  ],
}
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(false) should compose with generators 1`] = `
[
  "jhipster:java:build-tool",
]
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(false) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(true) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    [
      {
        "dependencies": [
          {
            "artifactId": "jackson-databind-nullable",
            "groupId": "org.openapitools",
            "version": "'JACKSON-DATABIND-NULLABLE-VERSION'",
          },
        ],
      },
      {
        "condition": true,
        "mavenDefinition": {
          "pluginManagement": [
            {
              "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <skipValidateSpec>false</skipValidateSpec>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <title>jhipster</title>
                                <useSpringBoot3>true</useSpringBoot3>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
",
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
              "version": "\${openapi-generator-maven-plugin.version}",
            },
          ],
          "plugins": [
            {
              "artifactId": "openapi-generator-maven-plugin",
              "groupId": "org.openapitools",
            },
          ],
          "properties": [
            {
              "property": "openapi-generator-maven-plugin.version",
              "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
            },
          ],
        },
      },
    ],
  ],
  "mergePrettierConfig": [
    {
      "overrides": [
        {
          "files": "*.java",
          "options": {
            "tabWidth": 4,
          },
        },
      ],
      "plugins": [
        "prettier-plugin-java",
      ],
    },
  ],
}
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(true) should compose with generators 1`] = `
[
  "jhipster:java:build-tool",
]
`;

exports[`generator - java:openapi-generator maven-addOpenapiGeneratorPlugin(true) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;
